fix sidebar spacing

--- a/css/hyde.css
+++ b/css/hyde.css
@@ -65,6 +65,8 @@ html {
   font-family: "Karla", serif;
   font-size: 3.25rem;
   text-align: center;
+  display: flex;
+  height: 100%;
 }
 
 /* Sidebar nav */
